# moirra

./: Cargo.toml  README.md
chat/: Cargo.toml
chat/src/: lib.rs
chat/src/clients/: mod.rs  twitch_client.rs
chat/src/clients/parsers/: parser.rs
moirra/: Cargo.toml
moirra/src/: .main.rs.swp  main.rs
twitch_api/: Cargo.toml
