[package]
name = "chat"
version = "0.1.0"
authors = ["Marek Counts <mcounts@suse.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.1.1"
tokio = { version = "0.2.11", features = ["full"] }
env_logger = "0.7.1"
log = "0.4.8"
futures = "0.3.4"
async-tungstenite = { version = "0.4.0", features = ["tokio-runtime"] }
