[package]
name = "moirra"
version = "0.1.0"
authors = ["Marek Counts <mcounts@suse.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quicli = "0.4"
structopt = "0.3.4"

# for testing only. remove soon
tokio = "0.1"
tungstenite = "*"
url = "2.1.0"
futures = "0.1.23"
tokio-tungstenite = "*"
chat = { path = "../chat" }
