[package]
name = "moirra"
version = "0.1.0"
authors = ["Marek Counts <mcounts@suse.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quicli = "0.4"
structopt = "0.3.4"
tokio = { version = "0.2.11", features = ["full"] }
async-tungstenite = { version = "0.4.0", features = ["tokio-runtime", "tokio-tls"] }

# for testing only. remove soon
url = "2.1.0"
futures = "0.1.23"
chat = { path = "../chat" }
